@@ -37,17 +37,38 @@ mvn clean javafx:run
 
 ### Run (after packaging)
 
-**Standard distribution (recommended for portable use)**
-
 ```bat
 target\dist\run.bat
 ```
 
-**Fat JAR**
+Or use the jlink runtime (after `mvn javafx:jlink`):
 
 ```bat
-target\dist\run-fat.bat
+target\connect4-runtime\bin\connect4.bat
 ```
+
+### Windows installer
+
+```bat
+build-installer.bat
+```
+
+## Modular JavaFX packaging
+
+This project includes `src/main/java/module-info.java`, which declares the module `com.akash.connectfour`.
+
+| Declaration | Purpose |
+|-------------|---------|
+| `requires javafx.*` | Declares JavaFX module dependencies at compile time |
+| `opens ... to javafx.fxml` | Allows FXML to inject `@FXML` fields into `Controller` |
+| `exports com.akash.connectfour` | Exposes application classes to the module system |
+
+Because the app is modular:
+
+- **`mvn javafx:jlink`** can build `target/connect4-runtime` with Java + JavaFX bundled
+- **`jpackage --runtime-image target/connect4-runtime --module com.akash.connectfour/com.akash.connectfour.Launcher`** produces a working Windows installer
+- **`java -jar`** alone will **not** work — use `run.bat`, `connect4.bat`, or the installer
+- Fat JAR shading is **not** used (it breaks JavaFX native libraries)
 
 ## Project structure
 
@@ -58,10 +79,14 @@ Connect-4-Game/
 │   ├── build.bat / build.sh       # mvn clean package
 │   ├── jpackage.bat / jpackage.sh # native installer
 │   └── create-icon.ps1            # PNG → ICO for Windows
-├── src/main/java/com/akash/connectfour/
-│   ├── Main.java
-│   ├── Controller.java
-│   └── ConnectFourBoard.java
+├── build-installer.bat            # package + jlink + jpackage
+├── src/main/java/
+│   ├── module-info.java           # Java module descriptor (required for jlink)
+│   └── com/akash/connectfour/
+│       ├── Launcher.java          # packaged entry point
+│       ├── Main.java
+│       ├── Controller.java
+│       └── ConnectFourBoard.java
 ├── src/main/resources/com/akash/connectfour/
 │   ├── game.fxml
 │   └── icon/
@@ -74,11 +99,11 @@ Connect-4-Game/
 
 | File | Description |
 |------|-------------|
-| `target/connect-4-game-1.0.0.jar` | Application JAR (classes + FXML + icon) |
-| `target/connect-4-game-1.0.0-fat.jar` | Fat JAR (all Java dependencies merged) |
-| `target/dist/` | Runnable folder with launchers and `lib/` |
+| `target/connect-4-game-1.0.0.jar` | Modular application JAR |
+| `target/connect4-runtime/` | Custom JRE + JavaFX (after `mvn javafx:jlink`) |
+| `target/dist/` | Portable folder with `run.bat` and `lib/` |
 | `target/connect-4-game-1.0.0-windows.zip` | Portable release ZIP |
-| `dist-native/` | Windows `.exe` installer (after jpackage) |
+| `installer/Connect4-1.0.0.exe` | Windows setup installer (after `build-installer.bat`) |
 
 ## Commands reference
 
@@ -88,59 +113,56 @@ Connect-4-Game/
 mvn clean package
 ```
 
+### Build everything (installer)
+
+```bat
+build-installer.bat
+```
+
 ### Run — portable distribution
 
 ```powershell
 target\dist\run.bat
 ```
 
-### Run — fat JAR
+### Run — manual (modular)
 
 ```powershell
-target\dist\run-fat.bat
-```
-
-### Run — manual (module path)
-
-```powershell
-java --module-path "target/dist/lib" `
-  --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.base `
-  -cp "target/connect-4-game-1.0.0.jar" com.akash.connectfour.Main
+java --module-path "target/dist/lib;target/connect-4-game-1.0.0.jar" `
+  --module com.akash.connectfour/com.akash.connectfour.Launcher
 ```
 
 ### Windows EXE installer
 
 ```bat
-scripts\jpackage.bat
+build-installer.bat
 ```
 
 Or manually:
 
 ```bat
-powershell -File scripts\create-icon.ps1
+mvn clean package
+mvn javafx:jlink
 
 jpackage ^
+  --type exe ^
   --name Connect4 ^
   --app-version 1.0.0 ^
   --vendor "Akash Raajput" ^
-  --input target\dist ^
-  --dest dist-native ^
-  --main-jar connect-4-game-1.0.0.jar ^
-  --main-class com.akash.connectfour.Main ^
-  --module-path target\dist\lib ^
-  --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.base ^
+  --dest installer ^
+  --runtime-image target\connect4-runtime ^
+  --module com.akash.connectfour/com.akash.connectfour.Launcher ^
   --icon src\main\resources\com\akash\connectfour\icon\app-icon.ico ^
-  --type exe ^
   --win-menu ^
   --win-shortcut ^
   --win-dir-chooser
 ```
 
-Output: `dist-native\Connect4-1.0.0.exe` (with WiX installed) or `dist-native\Connect4\Connect4.exe` (portable app-image fallback).
+Output: `installer\Connect4-1.0.0.exe`
 
-> **WiX Toolset** is required for a full Windows setup `.exe`. Without it, the script builds a portable app-image instead. Install WiX: `winget install WiXToolset.WiXToolset`
+> Requires **WiX Toolset** for `--type exe`. Install with: `winget install WiXToolset.WiXToolset`
 
-> Do **not** run the standard JAR with `java -jar` alone. JavaFX requires `--module-path` and `--add-modules`, or use the provided launcher scripts / Windows installer.
+> Do **not** use `java -jar` alone. This is a modular JavaFX app — use `run.bat`, `connect4.bat`, or the installer.
 
 ## Installation for end users
 
@@ -177,8 +199,8 @@ See [DEPLOYMENT.md](DEPLOYMENT.md) for the full GitHub Releases workflow.
 |-------|-----|
 | `FXML resource not found` | Run `mvn clean package`; confirm `game.fxml` is under `src/main/resources/com/akash/connectfour/` |
 | `java` / `mvn` not found | Install JDK 17+ and Maven; add them to `PATH` |
-| JavaFX errors at runtime | Use `run.bat`, not `java -jar` |
-| Fat JAR won't start | Use `run-fat.bat` or the standard `run.bat` / Windows installer |
+| JavaFX errors at runtime | Use `run.bat` or `connect4.bat`, not `java -jar` |
+| `jlink requires a module descriptor` | Ensure `src/main/java/module-info.java` exists |
 | jpackage icon error | Run `powershell -File scripts\create-icon.ps1` |
 | Linux/macOS ZIP from Windows build | Rebuild on the target OS (platform-specific JavaFX natives) |
 
